--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
-				<version>1.4.10</version>
+				<version>latest</version>
 				<executions>
 					<execution>
 						<id>default</id>
